--- a/ResturantManagementSystem/src/system/SpecialsForm.form
+++ b/ResturantManagementSystem/src/system/SpecialsForm.form
@@ -89,6 +89,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
@@ -120,9 +123,13 @@
                     <Column editable="true" title="Title 4" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="cc" green="cc" red="cc" type="rgb"/>
+                </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable() {&#xa;            @Override&#xa;            public Class getColumnClass(int column) {&#xa;                switch (column) {&#xa;                    case 0:&#xa;                        return String.class;&#xa;                    case 1:&#xa;                        return String.class;&#xa;                    case 2:&#xa;                        return String.class;&#xa;                    case 3:&#xa;                        return String.class;&#xa;                    case 4:&#xa;                        return String.class;&#xa;                    default:&#xa;                        return Boolean.class;&#xa;                }&#xa;            }&#xa;        };"/>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable() {&#xa;            @Override&#xa;            public Class getColumnClass(int column) {&#xa;                switch (column) {&#xa;                    case 0:&#xa;                        return String.class;&#xa;                    case 1:&#xa;                        return String.class;&#xa;                    case 2:&#xa;                        return String.class;&#xa;                    case 3:&#xa;                        return String.class;&#xa;                    default:&#xa;                        return Boolean.class;&#xa;                }&#xa;            }&#xa;        };"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
           </SubComponents>
