--- a/ResturantManagementSystem/src/system/BookingForm.form
+++ b/ResturantManagementSystem/src/system/BookingForm.form
@@ -424,7 +424,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="tableRes">
+                <Component class="javax.swing.JTable" name="tableReservation">
                   <Properties>
                     <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
